--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1013,6 +1013,9 @@ input[type="submit"]:disabled:focus {
         display: none;
     }
 }
+.u-remove-border-bottom td {
+    border-bottom: none;
+}
 
 
 /* Lists 
@@ -1100,3 +1103,18 @@ pre {
     from { margin-top: 0%; }
     to   { margin-top: -10%; }
 }
+
+/* Tables
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+table tbody tr:hover {
+    background-color: #fbfaf9;
+}
+table tr td:first-child,
+table tr th:first-child {
+    padding-left: 10px;
+}
+table tr td:last-child,
+table tr th:last-child {
+    padding-right: 10px;
+}
+
