--- a/app/templates/admin/page_list.html
+++ b/app/templates/admin/page_list.html
@@ -3,17 +3,35 @@
 {% block title %}Pages - {{ super() }}{% endblock title %}
 
 {% block content %}
-<div class="container u-add-margin-top">
+<div class="full-width-container">
+    <div class="row u-add-margin-top">
+        <div class="eight columns">
+            <h1>Pages <sup><small>{{ gapes | length }}</small></sup></h1>
+        </div>
+        <div class="four columns">
+            <a href="{{ url_for('admin.admin') }}" 
+               class="button button-primary u-add-margin-top u-add-margin-left u-pull-right">
+                <span class="oi" data-glyph="caret-left" title="Back" aria-hidden="true"></span>
+                <span class="u-hide-on-mobile"> to Admin</span>
+            </a>
+            <a href="{{ url_for('.admin_page_add') }}" 
+               title="Add new page"
+               class="button u-pull-right u-add-margin-top">
+                <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
+                <span class="u-hide-on-mobile"> page</span>
+            </a>
+        </div>
+    </div>
+    <hr>
     <div class="row">
-        <div class="six columns offset-by-three">
-            <h2>Manage pages</h2>
-            <table>
+        <div class="twelve columns">
+            <table class="u-full-width">
                 <thead>
                     <tr>
                         <th>id</th>
                         <th>name</th>
                         <th>url</th>
-                        <th>edit</th>
+                        <th class="u-text-right">edit</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -22,18 +40,27 @@
                         <td>{{ page.id }}</td>
                         <td>{{ page.name }}</td>
                         <td>{{ page.url }}</td>
-                        <td><a href="{{ url_for('.admin_page_edit', pk=page.id) }}">Edit</a></td>
+                        <td class="u-text-right">
+                            <a href="{{ url_for('.admin_page_edit', pk=page.id) }}">
+                                <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+                            </a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
+                {% if pages | length == 0 %}
                 <tfoot>
-                    <tr>
-                        <td colspan="4">
-                            <a href="{{ url_for('.admin_page_add') }}" class="button">Add page</a>
+                    <tr class="u-remove-border-bottom">
+                        <td colspan="4" class="u-text-right">
+                            <small>
+                                Nothing here yet. 
+                                <a href="{{ url_for('.admin_page_add') }}"> Add a new page</a>.
+                            </small>
                         </td>
-                    </tr>
+                    </tr> 
                 </tfoot>
-            </table>
+                {% endif %}
+        </table>
         </div>
     </div>
 </div>
