--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -3,33 +3,73 @@
 {% block title %}Users - {{ super() }}{% endblock title %}
 
 {% block content %}
-<div class="container u-add-margin-top">
+<div class="full-width-container">
+  <div class="row u-add-margin-top">
+    <div class="eight columns">
+        <h1>{{ _('Users') }} <sup><small>{{ users | length }}</small></sup></h1>
+    </div>
+    <div class="four columns">
+        <a href="{{ url_for('admin.admin') }}" 
+           class="button button-primary u-add-margin-top u-pull-right">
+            <span class="oi" data-glyph="caret-left" title="Back" aria-hidden="true"></span> to Admin
+        </a>
+    </div>
+  </div>
+  <hr>
   <div class="row">
-    <div class="six columns offset-by-three">
-        <h2>Manage users</h2>
-        <table>
+      <div class="twelve columns">
+        <table class="u-full-width">
             <thead>
                 <tr>
                     <th>id</th>
+                    <th>avatar</th>
                     <th>nickname</th>
+                    <th>full name</th>
                     <th>e-mail</th>
-                    <th>edit</th>
+                    <th>last login</th>
+                    <th>causes created</th>
+                    <th>causes supported</th>
+                    <th>actions taken</th>
+                    <th class="u-text-right">edit</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user in users %}
                 <tr>
                     <td>{{ user.id }}</td>
+                    <td>{{ render_avatar(user) }}</td>
                     <td>{{ user.nickname }}</td>
+                    <td>{{ user.full_name|default('n/a') }}</td>
                     <td>{{ user.email|default('n/a') }}</td>
                     <td>
+                        {% if user.last_login %}
+                            {{ user.last_login.strftime('%Y-%m-%d %H:%M:%S') }}
+                        {% else %}
+                            {{ user.last_login }}
+                        {% endif %}
+                    </td>
+                    <td>{{ user.created.count() }}</td>
+                    <td>{{ user.supports.distinct().count() }}</td>
+                    <td>{{ user.actions.count() }}</td>
+                    <td class="u-text-right">
                       <a href="{{ url_for('users.edit', nickname=user.nickname) }}">
-                        edit
+                          <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
                       </a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
+            {% if users | length == 0 %}
+            <tfoot>
+                <tr class="u-remove-border-bottom">
+                    <td colspan="4" class="u-text-right">
+                        <small>
+                            Nothing here yet. 
+                        </small>
+                    </td>
+                </tr> 
+            </tfoot>
+            {% endif %}
         </table>
     </div>
   </div>
