User profile feed now shows both posts and comments they made. Styled it to be more presentable as well

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1061,6 +1061,10 @@ dl dt {
 dl dd {
     margin-bottom: 2em;
 }
+.no-bullets {
+    list-style-type: none;
+    margin-left: 0;
+}
 
 
 /* Blockquotes 
