--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -43,7 +43,7 @@
                         {{ post.created_on.strftime('%b. %d, %Y') }}
                     </small>
                     <h5 class="u-remove-margin-bottom">
-                        <a href="{{ url_for('posts.post_detail', slug=post.cause.slug, pk=post.pk) }} ">
+                        <a href="{{ url_for('posts.post_detail', slug=post.cause.slug, pk=post.id) }} ">
                             {{ post.title }}
                         </a>
                     </h5>
@@ -53,7 +53,7 @@
                     {% else %}
                     <small>
                         Replied to 
-                        <a href="{{ url_for('posts.post_detail', slug=post.post.slug, pk=post.post.pk) }}">
+                        <a href="{{ url_for('posts.post_detail', slug=post.post.cause.slug, pk=post.post.id) }}">
                             {{ post.post.title }}
                         </a>
                         by 
@@ -87,30 +87,40 @@
             </ul>
         </div>
         <div class="three columns">
-            <h5>Created {{ user.created.count() }} causes</h5>
-            <ul>
-            {% for cause in user.created %}
-                <li><a href="/cause/{{ cause.slug }}">{{ cause.title }}</a></li>
-            {% endfor %}
-            </ul>
-            <hr>
-            <h5>Supporting {{ user.supports.distinct().count() }} causes</h5>
-            <ul>
-            {% for cause in user.supports %}
-                <li><a href="/cause/{{ cause.slug }}">{{ cause.title }}</a></li>
-            {% endfor %}
-            </ul>
-            <hr>
-            <h5>Took {{ user.actions.count() }} actions</h5>
-            <ul>
-            {% for action in user.actions %}
-                <li>
-                    <strong>{{ action.title }}</strong> <em>{{ action.cause.title }}</em>
-                    <br>
-                    {{ action.summary }}
-                </li>
-            {% endfor %}    
-            </ul>
+            <h5>Created {{ user.created.count() }} cause{% if user.created.count() != 1 %}s{% endif %}</h5>
+            {% if user.created.count() > 0 %}
+                <ul class="no-bullets">
+                {% for cause in user.created %}
+                    <li><a href="/cause/{{ cause.slug }}">{{ cause.title }}</a></li>
+                {% endfor %}
+                </ul>
+                <hr>
+            {% endif %}
+            <h5>Supporting {{ user.supports.distinct().count() }} cause{% if user.supports.distinct().count() != 1 %}s{% endif %}</h5>
+            {% if user.supports.distinct().count() > 0 %}
+                <ul class="no-bullets">
+                {% for cause in user.supports %}
+                    <li><a href="/cause/{{ cause.slug }}">{{ cause.title }}</a></li>
+                {% endfor %}
+                </ul>
+                <hr>
+            {% endif %}
+            <h5>Took {{ user.actions.count() }} action{% if user.actions.count() != 1 %}s{% endif %}</h5>
+            {% if user.actions.count() > 0 %}
+                <ul class="no-bullets">
+                {% for action in user.actions %}
+                    <li>
+                        <a href="{{ url_for('causes.cause_detail', slug=action.cause.slug) | replace('/dashboard', '') }}#modal-action-{{ action.id }}">
+                            {{ action.title }}
+                        </a>
+                        <small>
+                            from
+                            <a href="{{ url_for('causes.cause_detail', slug=action.cause_slug) }}">{{ action.cause.title }}</a>
+                        </small>
+                    </li>
+                {% endfor %}    
+                </ul>
+            {% endif %}
         </div>
     </div>
 </div>
