--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -295,7 +295,7 @@ p {
     margin: 0 2rem 4rem 2rem;
 }
 .hero-aside {
-    margin-top: -5px;
+    padding-bottom: 6px;
     line-height: 1.4em;
 }
 .glass {
@@ -327,7 +327,6 @@ p {
     opacity: 0.2;
 }
 .glass span {
-    font-style: italic;
     display: block;
     margin: -1.5em 0 1em 0;
 }
