--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -23,6 +23,7 @@ $(document).ready(function() {
             <strong>Need to protect your privacy?</strong> Use a pseudonym when you
             <a href="{{ url_for('.signup') }}">sign up</a>, and don't log
             in with a social media account linked to your real identity.
+            <a class="flash-close"><span class="oi" data-glyph="x"></span></a>
         </div>
     </div>
 </div>
