--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -26,6 +26,7 @@ $(document).ready(function() {
     <div class="twelve columns">
         <div class="flash warning u-remove-margin-top u-cf" role="alert">
             <strong>Need to protect your privacy?</strong> Use a pseudonym and don't log in with a social media account linked to your real identity.
+            <a class="flash-close"><span class="oi" data-glyph="x"></span></a>
         </div>
     </div>
 </div>
