--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -157,6 +157,12 @@ a.feed-link {
     background-color: #f7e4e1;
     border-color: #BCADAB;
 }
+.strength-meter {
+    padding: 4px 10px !important;
+    float: right;
+    width: 125px;
+    text-align: center;
+}
 
 
 /* Images
